# dialect

./: Cargo.toml
src/: lib.rs  themes.rs
src/themes/: dark_plus.rs  dracula.rs  gruvbox.rs  monokai.rs  nord.rs  seoul.rs  solarized.rs  zenburn.rs
