[package]
name = "dialect"
version = "0.4.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Types and traits for implementing syntax highlighting."
documentation = "https://docs.rs/dialect"
homepage = "https://github.com/arzg/dialect"
repository = "https://github.com/arzg/dialect"

[dependencies]
ansi_term = "0.12"
smol_str = "0.1"
strum = "0.18"
strum_macros = "0.18"
unicode-segmentation = "1"
